--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,7 +35,7 @@
   list-style-type: none;
   text-decoration: none;
   color: #fff;
-  font-size: 10pt;
+  font-size: 9pt;
 }
 .telephone:hover {
   color: #fff;
@@ -56,7 +56,7 @@
 }
 
 .navbar-opacity {
-  opacity: 0.9;
+  opacity: 0.85;
   transition: 1s;
 }
 
@@ -133,10 +133,8 @@
   line-height: 1.3;
 }
 .icons .card {
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 24rem;
+  margin: 15px auto;
+  width: 250pt;
   box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.1);
   --bs-card-border-width: 0px;
 }
@@ -144,7 +142,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
-  height: 25%;
+  height: 25% 15px;
   width: 25%;
   transition: 0.5s;
 }
@@ -162,7 +160,7 @@
 }
 .image .bottom-left {
   position: absolute;
-  font-size: 20px;
+  font-size: 10pt;
   bottom: 10px;
   left: 15px;
   color: #fff;
@@ -470,7 +468,7 @@ form::after {
   margin-bottom: 30px;
 }
 #gallery img {
-  max-width: 180px;
+  max-width: 160px;
 }
 
 .grayscale {
@@ -602,8 +600,8 @@ figure.effect-text-three:hover .timeline {
 figure.effect-text-three:hover .combo {
   -webkit-transition: scale 0.35s, -webkit-transform 0.35s;
   transition: scale 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(110px, 0, 0);
-  transform: translate3d(110px, 0, 0);
+  -webkit-transform: translate3d(70px, 0, 0);
+  transform: translate3d(70px, 0, 0);
   scale: 0.75;
 }
 figure.effect-text-three figcaption {
