--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -35,7 +35,7 @@ $darkgreen: #085507
     list-style-type: none
     text-decoration: none
     color: #fff
-    font-size: 10pt
+    font-size: 9pt
     &:hover
         color: #fff
         text-decoration: none
@@ -52,7 +52,7 @@ $darkgreen: #085507
             font-size: 11pt
 
 .navbar-opacity
-        opacity: .9
+        opacity: .85
         transition: 1s
 
 .btn-group
@@ -115,17 +115,15 @@ $darkgreen: #085507
     p
         line-height: 1.3
     .card
-        margin-top: 10px
-        margin-left: auto
-        margin-right: auto
-        width: 24rem
+        margin: 15px auto
+        width: 250pt
         box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.1)
         --bs-card-border-width: 0px
         img
             margin-left: auto
             margin-right: auto
             margin-top: 10px
-            height: 25%
+            height: 25%15px
             width: 25%
             transition: .5s
             &:hover
@@ -140,7 +138,7 @@ $darkgreen: #085507
     position: relative
     .bottom-left
         position: absolute
-        font-size: 20px
+        font-size: 10pt
         bottom: 10px
         left: 15px
         color: #fff
@@ -405,7 +403,7 @@ form
 #gallery
     margin-bottom: 30px
     img
-        max-width: 180px
+        max-width: 160px
 
 .grayscale
     transition: .25s ease-in-out
@@ -518,8 +516,8 @@ figure.effect-text-three
             .combo
                 -webkit-transition: scale 0.35s, -webkit-transform 0.35s
                 transition: scale 0.35s, transform 0.35s
-                -webkit-transform: translate3d(110px,0,0)
-                transform: translate3d(110px,0,0)
+                -webkit-transform: translate3d(70px,0,0)
+                transform: translate3d(70px,0,0)
                 scale: .75
 
         figcaption
