--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -510,11 +510,12 @@ $darkgreen: #085507
             min-height: 100%
             z-index: 10
         figcaption
-            padding-left: .45em
+            padding-left: .4em
             text-transform: uppercase
-            font-size: .7em
+            font-size: .68em
             -webkit-backface-visibility: hidden
             backface-visibility: hidden
+            z-index: 20
         figcaption
             position: absolute
             top: 4%
@@ -524,6 +525,9 @@ $darkgreen: #085507
         .goods
             top: 18%
             left: -10px
+        .machine
+            top: 4%
+            left: -20px
 
         .timeline
             position: absolute
@@ -580,21 +584,14 @@ figure.effect-text-three
     background-position: top center
     background-size: cover
     .fill
+        //overflow: hidden
+        //position: relative
         background-color: rgba(255,255,255,.9)
-        border-radius: 10px
-    
-    // ul
-    //     margin-left: -1em
-    // li
-    //     list-style-type: none
-    //     &:before
-    //         color: #9BC715
-    //         content: "☎"
-    //         padding-right: 10px
+        //border-radius: 5px
 
 .contacts
     margin-bottom: 10px
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    //box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
     ul
         margin-left: -1em
     .tel
@@ -614,13 +611,7 @@ figure.effect-text-three
         text-decoration: none
         color: #000
         font-size: 11pt
-    //list-style-type: none
-    //text-decoration: none
-    //color: #000
-    //font-size: 12pt
-    //&:hover
-    //    color: #000
-    //    text-decoration: none
+
 
 
 
